syntax = "proto3";

package prisel;

import "prisel/annotations.proto";
import "prisel/room_info.proto";

message GetLobbyStateResponse {
  option (for_system_action) = {
    type : GET_LOBBY_STATE,
    packet_type : RESPONSE
  };

  repeated LobbyRoomViewInfo rooms = 1;

  message LobbyRoomViewInfo {
    RoomInfo room = 1;
    int32 player_count = 2;
    int32 max_players = 3;
  }
}